Game logic prototype and various fixes and support functions